--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ body {
 /* Header */
 header {
   text-align: center;
-  background-color: #1e90ff;
+  background-color: #0612f9;
   padding: 30px 20px;
   border-radius: 10px;
   color: #fff;
@@ -66,7 +66,7 @@ header img {
 /* Footer / CTA */
 .footer {
   text-align: center;
-  background-color: #1e90ff;
+  background-color: #0821c6;
   color: #fff;
   padding: 40px 20px;
   border-radius: 10px;
